--- a/apps/server/pyproject.toml
+++ b/apps/server/pyproject.toml
@@ -30,6 +30,8 @@ dependencies = [
     "fastapi[standard]>=0.115.6",
     "uvicorn>=0.34.3",
     "whisper>=1.1.10",
+    "ollama>=0.6.1",
+    "faster-whisper>=1.2.1",
 ]
 
 [project.optional-dependencies]
